#7 [Wandy, Isa] - Corrects spacing on the second article of featured section for the desktop home

--- a/themes/main/src/sass/nacional.scss
+++ b/themes/main/src/sass/nacional.scss
@@ -24,7 +24,7 @@
   @include get-font(NACIONAL);
 
   @include media-query(MEDIUM) {
-    margin: 200px 5% 0 5%; 
+    margin: 220px 5% 0 5%; 
     width: 90%;
   }
 }
@@ -51,6 +51,12 @@
     border-top: 2px solid $gray-lighter;
     padding-top: 15px;
     margin-top: 15px;
+    @include media-query(MEDIUM) {
+      border-top: 0;
+      margin-top: 0;
+      padding-top: 0;
+      margin-bottom: 40px;
+    }
   }
 
   .description{
@@ -89,12 +95,6 @@
 
   .description{
     display: none;
-  }
-
-  
-
-  @include media-query(MEDIUM) {
-    margin-top: 10px;
   }
 
 }
